@@ -1,0 +1,8 @@
+{
+  "replace": false,
+  "values": [
+    "rftoolsstorage:crafting_manager",
+    "rftoolsstorage:modular_storage",
+    "rftoolsstorage:storage_scanner"
+  ]
+}
