@@ -11,7 +11,9 @@
       "conditions": {
         "items": [
           {
-            "item": "rftoolsstorage:storage_module2"
+            "items": [
+              "rftoolsstorage:storage_module2"
+            ]
           }
         ]
       }
