@@ -11,7 +11,9 @@
       "conditions": {
         "items": [
           {
-            "item": "rftoolsbase:machine_frame"
+            "items": [
+              "rftoolsbase:machine_frame"
+            ]
           }
         ]
       }
