@@ -3,7 +3,8 @@
   "pools": [
     {
       "name": "storage",
-      "rolls": 1,
+      "rolls": 1.0,
+      "bonus_rolls": 0.0,
       "entries": [
         {
           "type": "minecraft:item",
@@ -35,6 +36,7 @@
             },
             {
               "function": "minecraft:set_contents",
+              "type": "rftoolsstorage:modular_storage",
               "entries": [
                 {
                   "type": "minecraft:dynamic",
